Package_Tools/include-C/ImageMagick-6/magick/in_arbeiit/fertig/cache.h

/*
  Copyright 1999 ImageMagick Studio LLC, a non-profit organization
  dedicated to making software imaging solutions freely available.
  
  You may not use this file except in compliance with the License.  You may
  obtain a copy of the License at
  
    https://imagemagick.org/script/license.php
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.

  MagickCore cache methods.
*/
#ifndef MAGICKCORE_CACHE_H
#define MAGICKCORE_CACHE_H

#include "magick/blob.h"


typedef enum
{
  UndefinedCache,
  MemoryCache,
  MapCache,
  DiskCache,
  PingCache,
  DistributedCache
} CacheType;

extern  CacheType
  GetImagePixelCacheType(const Image *);

extern  const char
  *GetPixelCacheFilename(const Image *);

extern  const IndexPacket
  *GetVirtualIndexQueue(const Image *);

extern  const PixelPacket
  *GetVirtualPixels(const Image *,const ssize_t,const ssize_t,const size_t,
    const size_t,ExceptionInfo *);
extern  const PixelPacket
  *GetVirtualPixelQueue(const Image *);

extern  const void
  *AcquirePixelCachePixels(const Image *,MagickSizeType *,ExceptionInfo *);

extern  IndexPacket
  *GetAuthenticIndexQueue(const Image *);

extern  MagickBooleanType
  CacheComponentGenesis(void);
extern  MagickBooleanType
  GetOneVirtualMagickPixel(const Image *,const ssize_t,const ssize_t,
    MagickPixelPacket *,ExceptionInfo *);
extern  MagickBooleanType
  GetOneVirtualPixel(const Image *,const ssize_t,const ssize_t,PixelPacket *,
    ExceptionInfo *);
extern  MagickBooleanType
  GetOneVirtualMethodPixel(const Image *,const VirtualPixelMethod,const ssize_t,
    const ssize_t,PixelPacket *,ExceptionInfo *);
extern  MagickBooleanType
  GetOneAuthenticPixel(Image *,const ssize_t,const ssize_t,PixelPacket *,
    ExceptionInfo *);
extern  MagickBooleanType
  PersistPixelCache(Image *,const char *,const MagickBooleanType,
    MagickOffsetType *,ExceptionInfo *);
extern  MagickBooleanType
  SyncAuthenticPixels(Image *,ExceptionInfo *);

extern  MagickSizeType
  GetImageExtent(const Image *);

extern  PixelPacket
  *GetAuthenticPixels(Image *,const ssize_t,const ssize_t,const size_t,
    const size_t,ExceptionInfo *);
extern  PixelPacket
  *GetAuthenticPixelQueue(const Image *);
extern  PixelPacket
  *QueueAuthenticPixels(Image *,const ssize_t,const ssize_t,const size_t,
    const size_t,ExceptionInfo *);

extern  VirtualPixelMethod
  GetPixelCacheVirtualMethod(const Image *);
extern  VirtualPixelMethod
  SetPixelCacheVirtualMethod(const Image *,const VirtualPixelMethod);

extern  void
  CacheComponentTerminus(void);
extern  void
  *GetPixelCachePixels(Image *,MagickSizeType *,ExceptionInfo *);